# pytorch

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LuaHelper.cpp  LuaHelper.h  PyTorch.c  PyTorch.cpp  PyTorch.jinja2.pxd  PyTorch.jinja2.pyx  PyTorch.pxd  PyTorch.pyx  PyTorchAug.py  README.md  build.sh  clean.sh  floattensor.py  lua_externc.h  mylib.cpp  mylib.h  nnWrapper.cpp  nnWrapper.h  nnWrapper.jinja2.cpp  nnWrapper.jinja2.h  nn_run.sh  pytest.ini  requirements.txt  run.sh  run_nn.sh  run_rnn.sh  run_test_pytorch.py  run_test_pytorch.sh  run_tests.sh  setup.py  test_numpy.py  test_output.txt  test_pynn.py  test_pynn_output.txt  test_pytorch.py  test_pytorch_output.txt  (+1 more)
doc/: Implemented.md  Maintainer_guidelines.md  oldchanges.md
examples/: README.md
examples/luamodel/: README.md  downloadmnist.sh  runner.py  torch_model.lua
lightweight_lua_wrapper/: Lua.cpp  Lua.pyx  LuaHelper.cpp  LuaHelper.h  README.md  build.sh  run.sh  setup.py  test.py
prototyping/: test_rnn.py  try_asfloattensor.py
rocks/: pytorch-scm-1.rockspec
simpleexample/: README.md  luabit.lua  pybit.py
src/: LuaHelper.cpp  LuaHelper.h  PyTorch.cpp  PyTorch.jinja2.pxd  PyTorch.jinja2.pyx  PyTorch.pxd  PyTorch.pyx  PyTorchAug.py  PyTorchBootstrap.py  PyTorchHelpers.py  PyTorchLua.py  Storage.cpp  Storage.jinja2.pxd  Storage.jinja2.pyx  Storage.pxd  Storage.pyx  floattensor.py  lua.cpp  lua.jinja2.pxd  lua.jinja2.pyx  lua.pxd  lua.pyx  luajitloader.cpp  nnWrapper.cpp  nnWrapper.h  nnWrapper.jinja2.cpp  nnWrapper.jinja2.h  nnWrapper.jinja2.pxd  nnWrapper.pxd
src/diag/: loadstuff.cpp
test/: jinja2.test_pytorch.py  requirements.txt  testByteTensor.py  testDoubleTensor.py  testFloatTensor.py  testLongTensor.py  test_call_lua.lua  test_call_lua.py  test_helpers.py  test_inline_refcount.lua  test_inline_refcount.py  test_nnx.py  test_pynn.py  test_pytorch.py  test_pytorch_refcount.py  test_save_load.py  test_throw.lua  test_throw.py
test_outputs/: test_cltorch_output.txt  test_pynn_output.txt  test_pytorch_output.txt  tests_output.txt
travis/: install-torch.sh
